--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,10 +17,13 @@ jobs:
         run: xk6 build --with github.com/mstoykov/xk6-counter@latest
 
       - name: Run k6 extension test
-        run: ./k6 run --out dashboard=report=test_result.html script/test.js
+        run: ./k6 run --out json=test-result.json script/test.js
+
+      - name: Generate into html report
+        run: k6-web-dashboard replay --export test-report.html test-result.json
       
       - name: Upload performance test results
         uses: actions/upload-artifact@v3
         with:
           name: k6-report
-          path: test_result.html
+          path: test-report.html
