--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,15 +1,22 @@
-name: Main Workflow
 on: [push]
+
 jobs:
-  build:
-    name: Run k6 test
+  k6_load_test:
+    name: k6 Load Test
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-      - name: Run k6 cloud test
-        uses: grafana/k6-action@v0.3.1
+        uses: actions/checkout@v1
+
+      - name: Run local k6 test
+        uses: grafana/k6-action@v0.2.0
         with:
           filename: script/test.js
-          cloud: true
-          token: ${{ secrets.K6_CLOUD_API_TOKEN }}
+          flags: --out json=results.json
+
+      - name: Upload performance test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: k6-report
+          path: results.json
