--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,8 +1,9 @@
+name: Summary Workflow
 on: [push]
 
 jobs:
-  k6_load_test:
-    name: k6 Load Test
+  k6_local_test:
+    name: k6 local test run - summary example
     runs-on: ubuntu-latest
 
     steps:
@@ -13,10 +14,9 @@ jobs:
         uses: grafana/k6-action@v0.2.0
         with:
           filename: script/test.js
-          flags: --out json=results.json
 
-      - name: Upload performance test results
-        uses: actions/upload-artifact@v3
+      - name: Store performance test results
+        uses: actions/upload-artifact@v4
         with:
-          name: k6-report
-          path: results.json
+          name: k6-summary-report
+          path: summary.json
