--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,6 +14,7 @@ jobs:
         uses: grafana/k6-action@v0.2.0
         with:
           filename: script/test.js
+          flags: --out json=summary.json
 
       - name: Store performance test results
         uses: actions/upload-artifact@v3
